collects/tests/xml/clark-tests/invalid/004.ent
<!ENTITY % e1 "<!ELEMENT ">
<!ENTITY % e2 ">">
%e1; doc (#PCDATA) %e2;
